develop testing upgrading Benchmarks, hashFile(), verify(), fromHex() module, updateDirect, JMH benchmarks